# ragcite

./: .gitignore  README.md  pyproject.toml
src/ragcite/: __init__.py  client.py  config.py
src/ragcite/core/: types.py
src/ragcite/core/interfaces/: __init__.py  bm25_engine.py  embedder.py  language_detector.py  tokenizer.py
src/ragcite/core/utils/: elbow_method.py  similarity_algorithms.py
src/ragcite/integrations/langdetect/: __init__.py  language_detector.py
src/ragcite/integrations/openai/: embedder.py
src/ragcite/integrations/rank_bm25/: __init__.py  bm250k_engine.py
src/ragcite/integrations/tiktoken/: tiktoken_tokenizer.py
